# lets-update

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: app-to-ft.yml  template-to-ft.yml  www-to-ft.yml
backend/: Cargo.toml
backend/src/: db.rs  lib.rs  me.rs  schema.rs  update.rs  urls.rs
backend/src/db/: create.rs  list.rs  mod.rs
backend/src/handlers/: create.rs  create_text_post.rs  hello_world.rs  mod.rs  post_list.rs
design/: schema.md
lets-update-template.fifthtry.site/: FASTN.ftd  index.ftd  lets-update.ftd
lets-update-template.fifthtry.site/.packages/: lets-update.fifthtry.site
lets-update.fifthtry-community.com/: FASTN.ftd  index.ftd
lets-update.fifthtry-community.com/design/: index.ftd  initial-prompts.ftd  schema.ftd  server-to-server.ftd
lets-update.fifthtry.site/: FASTN.ftd  config.ftd  ds.ftd  index.ftd  records.ftd
lets-update.fifthtry.site/actions/: alert.js  dummy.ftd  index.ftd
lets-update.fifthtry.site/storybook/: feed.ftd  index.ftd  others.ftd  self.ftd
lets-update.fifthtry.site/ui/: dashboard.ftd  feed.ftd  page.ftd  self.ftd
scripts/: auto.sh  build-wasm.sh  optimise-wasm.sh  publish-app.sh
