[workspace]
members = ["backend"]
resolver = "2"

[profile.release]
lto = true
opt-level = 's'

[workspace.package]
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Siddhant Kumar <siddhant@fifthtry.com>",
]
edition = "2024"


[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"], default-features = false }
diesel = { version = "2", default-features = false, features = ["chrono"] }
ft-sdk = { version = "0.5.3", features = ["sqlite-default", "auth-provider", "field-extractors", "beta"] }
http = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lets-network = { version = "0.1.1", features = ["serde"] }
